--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,105 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Admin</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <title>Admin</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-  <body>
-    <section
-      class="ftco-section"
-      style="background-color: rgba(102, 95, 95, 0.889)"
-    >
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-7 col-lg-5">
-            <div class="wrap">
-              <div
-                class="img"
-                style="background-image: url(images/new.jpg)"
-              ></div>
-              <div class="login-wrap p-4 p-md-5">
-                <div class="d-flex">
-                  <div class="w-100">
-                    <h2 class="mb-4">Admin Sign In</h2>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <section class="ftco-section" style="background-color: rgba(102, 95, 95, 0.889)">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-7 col-lg-5">
+          <div class="wrap">
+            <div class="img" style="background-image: url(images/new.jpg)"></div>
+            <div class="login-wrap p-4 p-md-5">
+              <div class="d-flex">
+                <div class="w-100">
+                  <h2 class="mb-4">Admin Sign In</h2>
+                </div>
+              </div>
+              <form action="/admin/" method="post" class="signin-form">
+                <div class="form-group mt-3">
+                  <input type="text" name="email" class="form-control" required />
+                  <label class="form-control-placeholder" for="email">Email</label>
+                </div>
+                <div class="form-group">
+                  <input id="password-field" name="password" type="password" class="form-control" required />
+                  <label class="form-control-placeholder" for="password">Password</label>
+                  <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+                </div>
+                <div class="form-group">
+                  <button type="submit" class="form-control btn btn-primary rounded submit px-3">
+                    Sign In
+                  </button>
+                </div>
+                <div class="form-group d-md-flex">
+                  <div class="w-50 text-left"></div>
+                  <div class="w-50 text-md-right">
+                    <a href="#">Forgot Password</a>
                   </div>
                 </div>
-                <form action="/admin/" method="post" class="signin-form">
-                  <div class="form-group mt-3">
-                    <input
-                      type="text"
-                      name="email"
-                      class="form-control"
-                      required
-                    />
-                    <label class="form-control-placeholder" for="email"
-                      >Email</label
-                    >
-                  </div>
-                  <div class="form-group">
-                    <input
-                      id="password-field"
-                      name="password"
-                      type="password"
-                      class="form-control"
-                      required
-                    />
-                    <label class="form-control-placeholder" for="password"
-                      >Password</label
-                    >
-                    <span
-                      toggle="#password-field"
-                      class="fa fa-fw fa-eye field-icon toggle-password"
-                    ></span>
-                  </div>
-                  <div class="form-group">
-                    <button
-                      type="submit"
-                      class="form-control btn btn-primary rounded submit px-3"
-                    >
-                      Sign In
-                    </button>
-                  </div>
-                  <div class="form-group d-md-flex">
-                    <div class="w-50 text-left"></div>
-                    <div class="w-50 text-md-right">
-                      <a href="#">Forgot Password</a>
-                    </div>
-                  </div>
-                  <div>
-                    <% if(typeof message !=='undefined' ){%>
-                    <p style="color: rgb(109, 143, 109)"><%= message %></p>
-                    <% } %>
-                  </div>
-                </form>
-                <!-- <p class="text-center">Not a member? <a data-toggle="tab" href="#signup">Sign Up</a></p> -->
-              </div>
+                <div>
+                  <% if(typeof message !=='undefined' ){%>
+                  <p style="color: rgb(109, 143, 109)"><%= message %></p>
+                  <% } %>
+                </div>
+              </form>
+              <!-- <p class="text-center">Not a member? <a data-toggle="tab" href="#signup">Sign Up</a></p> -->
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-    
-  </body>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
+
+</body>
+
 </html>
