--- a/views/users/order-placed.ejs
+++ b/views/users/order-placed.ejs
@@ -13,10 +13,7 @@
   </nav>
   <!-- End .breadcrumb-nav -->
 
-  <div
-    class="error-content text-center"
-    style="background-image: url(assets/images/backgrounds/error-bg.jpg)"
-  >
+  <div class="error-content text-center" style="background-image: url(assets/images/backgrounds/error-bg.jpg)">
     <div class="container">
       <h1 class="error-title">Thank You For Your Order...</h1>
       <!-- End .error-title -->
