--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -13,105 +13,50 @@
   </nav>
   <!-- End .breadcrumb-nav -->
 
-  <div
-    class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17"
-    style="background-image: url('assets/images/backgrounds/login-bg.jpg')"
-  >
+  <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('assets/images/backgrounds/login-bg.jpg')">
     <div class="container">
       <div class="form-box">
         <div class="form-tab">
           <ul class="nav nav-pills nav-fill" role="tablist">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="register-tab-2"
-                data-toggle="tab"
-                href="#register-2"
-                role="tab"
-                aria-controls="register-2"
-                aria-selected="true"
-                >Register</a
-              >
+              <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#register-2" role="tab" aria-controls="register-2" aria-selected="true">Register</a>
             </li>
           </ul>
           <div class="tab-content">
-            <div
-              class="tab-pane fade show active"
-              id="register-2"
-              role="tabpanel"
-              aria-labelledby="register-tab-2"
-            >
+            <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
               <form action="/register" method="post">
                 <div class="form-group">
                   <label for="register-password-2">First Name*</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id=""
-                    name="firstname"
-                    required
-                  />
+                  <input type="text" class="form-control" id="" name="firstname" required />
                 </div>
                 <!-- End .form-group -->
 
                 <div class="form-group">
                   <label for="register-password-2">Last Name*</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id=""
-                    name="lastname"
-                    min="4"
-                    required
-                  />
+                  <input type="text" class="form-control" id="" name="lastname" min="4" required />
                 </div>
                 <!-- End .form-group -->
 
                 <div class="form-group">
                   <label for="register-email-2">Your email address *</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="register-email-2"
-                    name="email"
-                    required
-                  />
+                  <input type="email" class="form-control" id="register-email-2" name="email" required />
                 </div>
                 <!-- End .form-group -->
 
                 <div class="form-group">
                   <label for="register-email-2">Phone*</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id=""
-                    name="mobileno"
-                    minlength="10"
-                    required
-                  />
+                  <input type="text" class="form-control" id="" name="mobileno" minlength="10" required />
                 </div>
                 <!-- End .form-group -->
 
                 <div class="form-group">
                   <label for="register-password-2">Password *</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="register-password-2"
-                    name="password"
-                    required
-                  />
+                  <input type="password" class="form-control" id="register-password-2" name="password" required />
                 </div>
                 <!-- End .form-group -->
                 <div class="form-group">
                   <label for="register-password-2">Confirm Password *</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="register-password-2"
-                    name="cpassword"
-                    required
-                  />
+                  <input type="password" class="form-control" id="register-password-2" name="cpassword" required />
                 </div>
                 <!-- End .form-group -->
 
@@ -122,15 +67,8 @@
                   </button>
 
                   <div class="custom-control custom-checkbox">
-                    <input
-                      type="checkbox"
-                      class="custom-control-input"
-                      id="register-policy-2"
-                      required
-                    />
-                    <label class="custom-control-label" for="register-policy-2"
-                      >I agree to the <a href="#">privacy policy</a> *</label
-                    >
+                    <input type="checkbox" class="custom-control-input" id="register-policy-2" required />
+                    <label class="custom-control-label" for="register-policy-2">I agree to the <a href="#">privacy policy</a> *</label>
                   </div>
                   <!-- End .custom-checkbox -->
 
