--- a/views/users/order-details.ejs
+++ b/views/users/order-details.ejs
@@ -1,17 +1,16 @@
 <%- include('../partials/userlogedinhead 2.ejs') %>
 
 <style>
+  .gradient-custom {
+    /* fallback for old browsers */
+    background: #7e7b81;
 
-.gradient-custom {
-/* fallback for old browsers */
-background: #7e7b81;
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to top left, rgb(146, 80, 67), rgba(246, 243, 255, 1));
 
-/* Chrome 10-25, Safari 5.1-6 */
-background: -webkit-linear-gradient(to top left, rgb(146, 80, 67), rgba(246, 243, 255, 1));
-
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: linear-gradient(to top left, rgb(145, 108, 115), rgba(246, 243, 255, 1))
-}
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to top left, rgb(145, 108, 115), rgba(246, 243, 255, 1))
+  }
 </style>
 
 <section class="h-100 gradient-custom">
@@ -35,25 +34,24 @@ background: linear-gradient(to top left, rgb(145, 108, 115), rgba(246, 243, 255,
               <div class="card-body">
                 <div class="row">
                   <div class="col-md-2">
-                    <img src="./productsImage/<%= order[i-1].productId.image %>"
-                      class="img-fluid" alt="Phone">
+                    <img src="./productsImage/<%= order[i-1].productId.image %>" class="img-fluid" alt="Phone">
                   </div>
                   <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
                     <p class="text-muted mb-0"><%= order[i-1].productname %></p>
                   </div>
                   <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small">Qty: <%= order[i-1].quantity %></</p>
+                    <p class="text-muted mb-0 small">Qty: <%= order[i-1].quantity %></< /p>
                   </div>
                   <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small"><%= order[i-1].price %></</p>
+                    <p class="text-muted mb-0 small"><%= order[i-1].price %></< /p>
                   </div>
                   <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
-                    <p class="text-muted mb-0 small"><%= order[i-1].productId.category%></</p>
+                    <p class="text-muted mb-0 small"><%= order[i-1].productId.category%></< /p>
                   </div>
                   <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
                     <p class="text-muted mb-0 small"> total:Rs. <%= order[i-1].quantity * order[i-1].price %></p>
                   </div>
-                 
+
                 </div>
                 <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
                 <div class="row d-flex align-items-center">
@@ -63,9 +61,7 @@ background: linear-gradient(to top left, rgb(145, 108, 115), rgba(246, 243, 255,
                   <div class="col-md-10">
                     <div class="progress" style="height: 6px; border-radius: 16px;">
 
-                      <div class="progress-bar" role="progressbar"
-                       style="width: 1%; border-radius: 16px; background-color: #2e232b;" aria-valuenow="65"
-                        aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 1%; border-radius: 16px; background-color: #2e232b;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="d-flex justify-content-around mb-1">
                       <p class="text-muted mt-1 mb-0 small ms-xl-5">Order Confirmed</p>
@@ -74,14 +70,14 @@ background: linear-gradient(to top left, rgb(145, 108, 115), rgba(246, 243, 255,
                   </div>
                 </div>
                 <% if(orderDetails.status == 'Delivered'){ %>
-                  <% if(orderDetails.productReturned[i-1] == null){ %>
+                <% if(orderDetails.productReturned[i-1] == null){ %>
                 <div class="text-center d-flex" style="margin-left: 35vw;">
                   <a href="/return-product?id=<%= order[i-1].productId._id%>" class="nk-btn nk-btn-rounded nk-btn-color-main-1">Return Product</a>
                 </div>
                 <% }else{%>
-                  <p class="text-muted mb-0" style="margin-left: 37vw;">Product Returned</p>
-               <%  }} %>
-                
+                <p class="text-muted mb-0" style="margin-left: 37vw;">Product Returned</p>
+                <%  }} %>
+
               </div>
             </div>
             <% }%>
@@ -101,10 +97,9 @@ background: linear-gradient(to top left, rgb(145, 108, 115), rgba(246, 243, 255,
               <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>
             </div>
           </div>
-          <div class="card-footer border-0 px-4 py-5"
-            style="background-color: #9b4f44; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+          <div class="card-footer border-0 px-4 py-5" style="background-color: #9b4f44; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
             <h5 class="d-flex align-items-center justify-content-end text-white text-uppercase mb-0">Total
-              paid:  <span class="h2 mb-0 ms-2"> Rs. <%= totalprice %></span></h5>
+              paid: <span class="h2 mb-0 ms-2"> Rs. <%= totalprice %></span></h5>
           </div>
         </div>
       </div>
@@ -116,5 +111,4 @@ background: linear-gradient(to top left, rgb(145, 108, 115), rgba(246, 243, 255,
 
 
 
-
-  <%- include('../partials/userfooter.ejs') -%>
+<%- include('../partials/userfooter.ejs') -%>
