--- a/views/users/otp-verify.ejs
+++ b/views/users/otp-verify.ejs
@@ -12,44 +12,21 @@
   </nav>
   <!-- End .breadcrumb-nav -->
 
-  <div
-    class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17"
-    style="background-image: url('assets/images/backgrounds/login-bg.jpg')"
-  >
+  <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('assets/images/backgrounds/login-bg.jpg')">
     <div class="container">
       <div class="form-box">
         <div class="form-tab">
           <ul class="nav nav-pills nav-fill" role="tablist">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="register-tab-2"
-                data-toggle="tab"
-                href="#register-2"
-                role="tab"
-                aria-controls="register-2"
-                aria-selected="true"
-                >Please Enter The OTP</a
-              >
+              <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#register-2" role="tab" aria-controls="register-2" aria-selected="true">Please Enter The OTP</a>
             </li>
           </ul>
           <div class="tab-content">
-            <div
-              class="tab-pane fade show active"
-              id="register-2"
-              role="tabpanel"
-              aria-labelledby="register-tab-2"
-            >
+            <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
               <form action="/otp-verify" method="post">
                 <div class="form-group">
                   <label for="singin-password-2">OTP</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id=""
-                    name="otp"
-                    required
-                  />
+                  <input type="text" class="form-control" id="" name="otp" required />
                 </div>
                 <!-- End .form-group -->
 
