--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -11,22 +11,12 @@
       </ol>
 
       <nav class="product-pager ml-auto" aria-label="Product">
-        <a
-          class="product-pager-link product-pager-prev"
-          href="#"
-          aria-label="Previous"
-          tabindex="-1"
-        >
+        <a class="product-pager-link product-pager-prev" href="#" aria-label="Previous" tabindex="-1">
           <i class="icon-angle-left"></i>
           <span>Prev</span>
         </a>
 
-        <a
-          class="product-pager-link product-pager-next"
-          href="#"
-          aria-label="Next"
-          tabindex="-1"
-        >
+        <a class="product-pager-link product-pager-next" href="#" aria-label="Next" tabindex="-1">
           <span>Next</span>
           <i class="icon-angle-right"></i>
         </a>
@@ -45,45 +35,20 @@
             <div class="product-gallery product-gallery-vertical">
               <div class="row">
                 <figure class="product-main-image">
-                  <img
-                    id="product-zoom"
-                    src="./productsImage/<%= productData[0].image %>"
-                    data-zoom-image="./productsImage/<%= productData[0].image %>"
-                    alt="product image"
-                  />
+                  <img id="product-zoom" src="./productsImage/<%= productData[0].image %>" data-zoom-image="./productsImage/<%= productData[0].image %>" alt="product image" />
 
-                  <a
-                    href="#"
-                    id="btn-product-gallery"
-                    class="btn-product-gallery"
-                  >
+                  <a href="#" id="btn-product-gallery" class="btn-product-gallery">
                     <i class="icon-arrows"></i>
                   </a>
                 </figure>
                 <!-- End .product-main-image -->
 
                 <div id="product-zoom-gallery" class="product-image-gallery">
-                  <a
-                    class="product-gallery-item active"
-                    href="#"
-                    data-image="./productsImage/<%= productData[0].image %>"
-                    data-zoom-image="./productsImage/<%= productData[0].image %>"
-                  >
-                    <img
-                      src="./productsImage/<%= productData[0].image %>"
-                      alt="product side"
-                    />
+                  <a class="product-gallery-item active" href="#" data-image="./productsImage/<%= productData[0].image %>" data-zoom-image="./productsImage/<%= productData[0].image %>">
+                    <img src="./productsImage/<%= productData[0].image %>" alt="product side" />
                   </a>
-                  <a
-                    class="product-gallery-item"
-                    href="#"
-                    data-image="./productsImage/<%= productData[0].image %>"
-                    data-zoom-image="./productsImage/<%= productData[0].image %>"
-                  >
-                    <img
-                      src="./productsImage/<%= productData[0].image %>"
-                      alt="product cross"
-                    />
+                  <a class="product-gallery-item" href="#" data-image="./productsImage/<%= productData[0].image %>" data-zoom-image="./productsImage/<%= productData[0].image %>">
+                    <img src="./productsImage/<%= productData[0].image %>" alt="product cross" />
                   </a>
                 </div>
                 <!-- End .product-image-gallery -->
@@ -101,19 +66,11 @@
 
               <div class="ratings-container">
                 <div class="ratings">
-                  <div
-                    class="ratings-val"
-                    style="width: <%= (productData[0].rating / 5) * 100 %>%"
-                  ></div>
+                  <div class="ratings-val" style="width: <%= (productData[0].rating / 5) * 100 %>%"></div>
                   <!-- End .ratings-val -->
                 </div>
                 <!-- End .ratings -->
-                <a
-                  class="ratings-text"
-                  href="#product-review-link"
-                  id="review-link"
-                  >( )</a
-                >
+                <a class="ratings-text" href="#product-review-link" id="review-link">( )</a>
               </div>
               <!-- End .rating-container -->
 
@@ -130,16 +87,10 @@
 
                 <div class="product-nav product-nav-thumbs">
                   <a href="#" class="active">
-                    <img
-                      src="./productsImage/<%= productData[0].image %>"
-                      alt="product desc"
-                    />
+                    <img src="./productsImage/<%= productData[0].image %>" alt="product desc" />
                   </a>
                   <a href="#">
-                    <img
-                      src="./productsImage/<%= productData[0].image %>"
-                      alt="product desc"
-                    />
+                    <img src="./productsImage/<%= productData[0].image %>" alt="product desc" />
                   </a>
                 </div>
                 <!-- End .product-nav -->
@@ -165,12 +116,12 @@
               <!-- End .details-filter-row -->
 
               <div class="product-details-action">
-                <div class="details-action-wrapper">          
-                <button onclick="addToCart('<%= productData[0]._id %>')" class="btn-product btn-cart border-0 btn-outline-primary" > <span>add to cart</span></button>
-               </div>
+                <div class="details-action-wrapper">
+                  <button onclick="addToCart('<%= productData[0]._id %>')" class="btn-product btn-cart border-0 btn-outline-primary"> <span>add to cart</span></button>
+                </div>
 
-                <div class="details-action-wrapper">        
-                <button onclick="addToWish('<%= productData[0]._id %>')" class="btn-product btn-cart border-0 btn-outline-primary"><span>add to wishlist</span></button>             
+                <div class="details-action-wrapper">
+                  <button onclick="addToWish('<%= productData[0]._id %>')" class="btn-product btn-cart border-0 btn-outline-primary"><span>add to wishlist</span></button>
                 </div>
                 <!-- End .details-action-wrapper -->
               </div>
@@ -197,25 +148,11 @@
       <div class="product-details-tab">
         <ul class="nav nav-pills justify-content-center" role="tablist">
           <li class="nav-item">
-            <a
-              class="nav-link active"
-              id="product-desc-link"
-              data-toggle="tab"
-              href="#product-desc-tab"
-              role="tab"
-              aria-controls="product-desc-tab"
-              aria-selected="true"
-              >Description</a
-            >
+            <a class="nav-link active" id="product-desc-link" data-toggle="tab" href="#product-desc-tab" role="tab" aria-controls="product-desc-tab" aria-selected="true">Description</a>
           </li>
         </ul>
         <div class="tab-content">
-          <div
-            class="tab-pane fade show active"
-            id="product-desc-tab"
-            role="tabpanel"
-            aria-labelledby="product-desc-link"
-          >
+          <div class="tab-pane fade show active" id="product-desc-tab" role="tabpanel" aria-labelledby="product-desc-link">
             <div class="product-desc-content">
               <h3>Product Information</h3>
               <p><%= productData[0].pdescription %></p>
@@ -233,10 +170,7 @@
       <h2 class="title text-center mb-4">You May Also Like</h2>
       <!-- End .title text-center -->
 
-      <div
-        class="owl-carousel owl-simple carousel-equal-height carousel-with-shadow"
-        data-toggle="owl"
-        data-owl-options='{
+      <div class="owl-carousel owl-simple carousel-equal-height carousel-with-shadow" data-toggle="owl" data-owl-options='{
                             "nav": false, 
                             "dots": true,
                             "margin": 20,
@@ -260,38 +194,28 @@
                                     "dots": false
                                 }
                             }
-                        }'
-      >
+                        }'>
         <% if( product.length > 0){ %> <% for(let i = 1;i <= product.length;
         i++){ %> <%if(productData[0].category == product[i-1].category) { %>
         <div class="product product-7 text-center">
           <figure class="product-media">
             <span class="product-label label-new">New</span>
             <a href="product.html">
-              <img
-                src="./productsImage/<%= product[i-1].image %>"
-                alt="Product image"
-                class="product-image"
-              />
+              <img src="./productsImage/<%= product[i-1].image %>" alt="Product image" class="product-image" />
             </a>
 
             <div class="product-action-vertical">
-              <div class="product-action-vertical">            
+              <div class="product-action-vertical">
                 <button onclick="addToWish('<%= product[i-1]._id %>')" class="btn-product-icon btn-wishlist "></button>
               </div>
-              <a
-                href="popup/quickView.html"
-                class="btn-product-icon btn-quickview"
-                title="Quick view"
-                ><span>Quick view</span></a
-              >
-             
+              <a href="popup/quickView.html" class="btn-product-icon btn-quickview" title="Quick view"><span>Quick view</span></a>
+
             </div>
             <!-- End .product-action-vertical -->
 
-            <div class="product-action">          
-                <button onclick="addToCart('<%= product[i-1]._id %>')" class="btn-product btn-cart border-0 btn-outline-primary" > <span>add to cart</span></button>
-              </div>
+            <div class="product-action">
+              <button onclick="addToCart('<%= product[i-1]._id %>')" class="btn-product btn-cart border-0 btn-outline-primary"> <span>add to cart</span></button>
+            </div>
             <!-- End .product-action -->
           </figure>
           <!-- End .product-media -->
@@ -309,10 +233,7 @@
             <!-- End .product-price -->
             <div class="ratings-container">
               <div class="ratings">
-                <div
-                  class="ratings-val"
-                  style="width: <%=(product[0].rating / 5) * 100 %> %"
-                ></div>
+                <div class="ratings-val" style="width: <%=(product[0].rating / 5) * 100 %> %"></div>
                 <!-- End .ratings-val -->
               </div>
               <!-- End .ratings -->
@@ -322,16 +243,10 @@
 
             <div class="product-nav product-nav-thumbs">
               <a href="#" class="active">
-                <img
-                  src="./productsImage/<%= product[i-1].image %>"
-                  alt="product desc"
-                />
+                <img src="./productsImage/<%= product[i-1].image %>" alt="product desc" />
               </a>
               <a href="#">
-                <img
-                  src="./productsImage/<%= product[i-1].image %>"
-                  alt="product desc"
-                />
+                <img src="./productsImage/<%= product[i-1].image %>" alt="product desc" />
               </a>
             </div>
             <!-- End .product-nav -->
