--- a/views/users/signin.ejs
+++ b/views/users/signin.ejs
@@ -13,56 +13,27 @@
   </nav>
   <!-- End .breadcrumb-nav -->
 
-  <div
-    class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17"
-    style="background-image: url('assets/images/backgrounds/login-bg.jpg')"
-  >
+  <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('assets/images/backgrounds/login-bg.jpg')">
     <div class="container">
       <div class="form-box">
         <div class="form-tab">
           <ul class="nav nav-pills nav-fill" role="tablist">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="register-tab-2"
-                data-toggle="tab"
-                href="#register-2"
-                role="tab"
-                aria-controls="register-2"
-                aria-selected="true"
-                >SignIn</a
-              >
+              <a class="nav-link active" id="register-tab-2" data-toggle="tab" href="#register-2" role="tab" aria-controls="register-2" aria-selected="true">SignIn</a>
             </li>
           </ul>
           <div class="tab-content">
-            <div
-              class="tab-pane fade show active"
-              id="register-2"
-              role="tabpanel"
-              aria-labelledby="register-tab-2"
-            >
+            <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
               <form action="/login" method="post">
                 <div class="form-group">
                   <label for="singin-email-2">email address *</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id=""
-                    name="email"
-                    required
-                  />
+                  <input type="email" class="form-control" id="" name="email" required />
                 </div>
                 <!-- End .form-group -->
 
                 <div class="form-group">
                   <label for="singin-password-2">Password *</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id=""
-                    name="password"
-                    required
-                  />
+                  <input type="password" class="form-control" id="" name="password" required />
                 </div>
                 <!-- End .form-group -->
 
@@ -73,14 +44,8 @@
                   </button>
 
                   <div class="custom-control custom-checkbox">
-                    <input
-                      type="checkbox"
-                      class="custom-control-input"
-                      id="signin-remember-2"
-                    />
-                    <label class="custom-control-label" for="signin-remember-2"
-                      >Remember Me</label
-                    >
+                    <input type="checkbox" class="custom-control-input" id="signin-remember-2" />
+                    <label class="custom-control-label" for="signin-remember-2">Remember Me</label>
                   </div>
                   <!-- End .custom-checkbox -->
 
