--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -42,12 +42,14 @@
     <!-- Table -->
     <!-- ============================================================== -->
     <div class="row">
-      <div class="col-md-6">
-        <div style="width: 500px;">
+      <div class=" col-12 col-xl-6 ">
+        <div class="bg-light rounded h-100 p-4">`
+
           <input type="hidden" id="category" value="<%= category %>">
           <input type="hidden" id="count" value="<%= count %>">
           <h3 class="text-danger text-center">Popular Categories:</h3>
           <canvas id="myChart"></canvas>
+
         </div>
         <script type="text/javascript">
           const count = document.getElementById('count')
@@ -82,7 +84,7 @@
           });
         </script>
       </div>
-      <div class="col-md-6">
+      <div class="col-12 col-xl-6">
       </div>
     </div>
 
