--- a/views/partials/userlogedinIndex.ejs
+++ b/views/partials/userlogedinIndex.ejs
@@ -70,7 +70,7 @@
             <a href="/wishlist" class="wishlist-link">
               <i class="icon-heart-o"></i>
               <span class="wishlist-count" id="wish-count"><%= wishCount %></span>
-              <span class="wishlist-txt">My Wishlist</span>
+              <span class="wishlist-txt"></span>
             </a>
             <div class="dropdown cart-dropdown">
               <a href="/cart" class="dropdown-toggle">
